--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oopsie, but hi</title>
-</head>
-<body>
-    <h1>You're looking for this page: <a href="/api/">Email tracker</a>.</h1>
-</body>
+    <style>
+      body {
+        display: grid;
+        place-items: center;
+        min-height: 100vh;
+        background: rgb(198, 33, 171);
+        background: linear-gradient(
+          144deg,
+          rgba(198, 33, 171, 1) 0%,
+          rgba(0, 212, 255, 1) 100%
+        );
+        background-repeat: no-repeat;
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div>
+        <h1 style="font-size: 100px;">📧</h1>
+        <p>You're looking for this page: <a href="/api/">Email tracker</a>.</p>
+    </div>
+  </body>
 </html>
